--- a/problems/fa24-final/q01.md
+++ b/problems/fa24-final/q01.md
@@ -67,7 +67,7 @@ The expression filters the grouped DataFrame to include only groups where the nu
 
 1. **`groupby('Brand')`**: Groups the `skin` DataFrame by the unique values in the `"Brand"` column, creating subgroups for each brand. Now, when we apply the next step, it will perform the action on each `Brand` group. 
 2. **`filter`**: We use **`filter`** instead of **`agg`** (or other options) because **`filter`** is designed to evaluate a condition on the entire group and decide whether to include or exclude the group in the final result. In this case, we want to include only groups (brands) where the number of expensive products is fewer than 5. 
-3. **`(lambda x: (x['Price'] >= 100).sum() < 5)`**: This lambda function runs on each **group** (in this case, x is a dataframe). It calculates the number of products in the group where the price is greater than or equal to $100 (i.e., expensive products). If this count is less than 5, the group is kept. Otherwise, the group is excluded from our final result. 
+3. **`(lambda x: (x['Price'] >= 100).sum() < 5)`**: This lambda function runs on each **group** (in this case, x is a DataFrame). It calculates the number of products in the group where the price is greater than or equal to $100 (i.e., expensive products). If this count is less than 5, the group is kept. Otherwise, the group is excluded from our final result. 
 
 Since we have an `.nunique()` at the end of our original expression, we will return the **number** (`n` in `nunique`) of unique brands. 
 
