--- a/problems/old-from-10/sp24-final/q10.md
+++ b/problems/old-from-10/sp24-final/q10.md
@@ -33,9 +33,9 @@ p_val = np.count_nonzero(diffs __(e)__ observed_diff) / 10000
 - (d) `apts[apts.get("neighborhood")!="UTC"].get("Rent").mean()`
 - (e) `>=`
 
-For blanks (a) and (b), we can gather from context (hypothesis test description, variable names, and being inside of a for loop) that this portion of our code needs to repeatedly generate samples of size 85 (the number of observations in our dataset that are from UTC) and size 715 (the number of observations in our dataset that are not from UTC). We will then take the means of these samples and assign them to `utc_sample_mean` and `elsewhere_sample_mean`. We can generate these samples, with replacement, from the rows in our dataframe, hinting that the correct code for blanks (a) and (b) are: `apts.sample(85, replace=True).get("Rent").mean()` and `apts.sample(715, replace=True).get("Rent").mean()`.
+For blanks (a) and (b), we can gather from context (hypothesis test description, variable names, and being inside of a for loop) that this portion of our code needs to repeatedly generate samples of size 85 (the number of observations in our dataset that are from UTC) and size 715 (the number of observations in our dataset that are not from UTC). We will then take the means of these samples and assign them to `utc_sample_mean` and `elsewhere_sample_mean`. We can generate these samples, with replacement, from the rows in our DataFrame, hinting that the correct code for blanks (a) and (b) are: `apts.sample(85, replace=True).get("Rent").mean()` and `apts.sample(715, replace=True).get("Rent").mean()`.
 
-For blanks (c) and (d), this portion of the code needs to take our original dataframe and gather the observed means for apartments from UTC and apartments not from UTC. We can achieve this by querying our dataframe, grabbing the rent column, and taking the mean. This implies our correct code for blanks (c) and (d) are: `apts[apts.get("neighborhood")=="UTC"].get("Rent").mean()` and `apts[apts.get("neighborhood")!="UTC"].get("Rent").mean()`.
+For blanks (c) and (d), this portion of the code needs to take our original DataFrame and gather the observed means for apartments from UTC and apartments not from UTC. We can achieve this by querying our DataFrame, grabbing the rent column, and taking the mean. This implies our correct code for blanks (c) and (d) are: `apts[apts.get("neighborhood")=="UTC"].get("Rent").mean()` and `apts[apts.get("neighborhood")!="UTC"].get("Rent").mean()`.
 
 For blank (e), we need to determine, based off of our null and alternative hypotheses, how we should compare the differences in found in our simulations against our observed difference. TODO
 
