--- a/problems/old-from-10/sp24-final/q13.md
+++ b/problems/old-from-10/sp24-final/q13.md
@@ -13,7 +13,7 @@ def float_bath(s):
     else:
         n_baths = 3
     if "and a half" in s:
-        __(a)__
+        n_baths = n_baths + 0.5
     return n_baths
 ```
 
@@ -36,9 +36,9 @@ Values in the `"Lease Term"` column are `"1 month"`, `"6 months"`, and `"1 year"
 ```py
 def int_lease(s):
     if s[-1] == "r":
-        return __(b)__
+        return 12
     else:
-        return __(c)__
+        return int(s[0])
 ```
 
 What goes in blanks `(b)` and `(c)`?
@@ -81,7 +81,7 @@ Using the provided `int_bed` function, write one line of code that modifies the 
 
 **Answer:** `apts = apts.assign(Bed = apts.get("Bed").apply(int_bed))`
 
-The code above takes the "Bed" column, `apts.get("Bed")`, and uses `.apply(int_bed)`, which runs each entry through the `int_bed` function that we have defined above. All that is left is to save the result back to the dataframe; this can be done with `.assign()`.
+The code above takes the "Bed" column, `apts.get("Bed")`, and uses `.apply(int_bed)`, which runs each entry through the `int_bed` function that we have defined above. All that is left is to save the result back to the DataFrame; this can be done with `.assign()`.
 
 # END SOLUTION
 
