--- a/problems/old-from-10/wi24-final/q02.md
+++ b/problems/old-from-10/wi24-final/q02.md
@@ -37,7 +37,7 @@ What goes in blank (b)?
 
 **Answer:** `.sum()` or `.mean()` or `.min()`, etc. 
 
-Any aggregation method applied on `df.groupby()` would work. We only want to remove cases in which an athlete participates in the same sport for multiple years, and get unique name-sport pairs. Therefore, we don’t care about the aggregated numeric value. Notice `.unique()` is not correct because it is not an aggregation method used on dataframe after grouping by. If you use `.unique()`, it will give you "AttributeError: 'DataFrameGroupBy' object has no attribute 'unique'". However, `.unique()` can be used after `Series.groupby()`. For more info: [link] (https://pandas.pydata.org/docs/reference/api/pandas.core.groupby.SeriesGroupBy.unique.html)
+Any aggregation method applied on `df.groupby()` would work. We only want to remove cases in which an athlete participates in the same sport for multiple years, and get unique name-sport pairs. Therefore, we don’t care about the aggregated numeric value. Notice `.unique()` is not correct because it is not an aggregation method used on DataFrame after grouping by. If you use `.unique()`, it will give you "AttributeError: 'DataFrameGroupBy' object has no attribute 'unique'". However, `.unique()` can be used after `Series.groupby()`. For more info: [link] (https://pandas.pydata.org/docs/reference/api/pandas.core.groupby.SeriesGroupBy.unique.html)
 
 <average>96</average>
 
