--- a/problems/fa24-final/q05.md
+++ b/problems/fa24-final/q05.md
@@ -43,7 +43,7 @@ We know:
 - $\text{TF-IDF} = \frac{2}{3}$ 
 
 
-Let T be the total number of terms in d (d refers to the sentence at the top) and n refer to number of documents in which t appears, then substituting this into our formula gives us:
+Let $T$ be the total number of terms in $d$ ($d$ refers to the sentence at the top) and $n$ refer to number of documents in which $t$ appears, then substituting this into our formula gives us:
 $$
 \frac{5}{T} \cdot \log_2\left(\frac{60}{n}\right) = \frac{2}{3}
 $$
@@ -51,20 +51,20 @@ $$
 The problem then boils down to checking whether the above equation holds true in each of the five options
 
 * **Option 1: All 60 product names contain the term **drops**.** 
-  - If $n = 60$, then $\log_2(60/60) = 0$ 
-  - This makes TF-IDF = 0, contradicting $\frac{2}{3}$ \
+  - If $n = 60$, then $\log_2(60/60) = 0$.
+  - This makes TF-IDF = 0, contradicting $\frac{2}{3}$. \
 
   **This is NOT possible.**
 
 * **Option 2: 14 other product names contain the term **drops**.**
-  - If $n = 15$ (original document + 14 others), $\log_2(60/15) = 2$
-  - $\frac{5}{T} \cdot 2 = \frac{2}{3}$ implies $T = 15$ \
+  - If $n = 15$ (original document + 14 others), $\log_2(60/15) = 2$.
+  - $\frac{5}{T} \cdot 2 = \frac{2}{3}$ implies $T = 15$. \
 
   **This is possible.**
 
 * **Option 3: None of the 59 other product names contain the term **drops**.**
-  - If $n = 1$, $\log_2(60/1) \approx 5.91$
-  - This leads to a non-integer total terms $T$
+  - If $n = 1$, $\log_2(60/1) \approx 5.91$.
+  - This leads to a non-integer total terms $T$.
   - Since $T$ must be an integer, this is not consistent with the problem's constraints. \
 
   **This is NOT possible.**
@@ -73,14 +73,18 @@ The problem then boils down to checking whether the above equation holds true in
   If $T = 15$, substituting into the TF equation, we get:
 
   $\text{TF} = \frac{5}{15} = \frac{1}{3}$
-  $\frac{1}{3} \cdot \text{IDF} = \frac{2}{3} \implies \text{IDF} = 2 $
+
+  $\frac{1}{3} \cdot \text{IDF} = \frac{2}{3} \implies \text{IDF} = 2$
+
   Substituting $\text{IDF} = 2$ into the IDF formula:
+
   $$
   2 = \log_2\left(\frac{60}{n}\right)
   $$
   $$
-  2 = \log_2(4) \implies \frac{60}{n} = 4 \implies n = 14
+  2 = \log_2(4) \implies \frac{60}{n} = 4 \implies n = 15
   $$
+  
   This is consistent with the problem's constraints.
 
   **This is possible.**
