--- a/problems/fa24-final/q07.md
+++ b/problems/fa24-final/q07.md
@@ -185,12 +185,16 @@ $$\frac{\partial R_\lambda(h)}{\partial h} = -2 \left( \frac{1}{n} \sum_{i = 1}^
 
 # BEGIN SUBPROB
 
+[🎥 Walkthrough Available](https://www.loom.com/share/3cfce64b4e424f1e9119aa787b25b005?sid=ceb5fa4d-b7a3-48ad-bbc4-43e437b739a2)
+
 Find $h^*$, the constant prediction that minimizes $R_\lambda(h)$. Show
 your work, and put a $\boxed{\text{box}}$ around your final answer, which should be an
 **expression in terms of $y_i$, $n$, and/or $\lambda$**.
 
 # BEGIN SOLUTION
 **Answer**: $h^* = \frac{\sum_{i = 1}^n y_i^2}{\sum_{i = 1}^n y_i + n\lambda}$
+
+<center><iframe width="800" height="450" src="https://www.loom.com/embed/3cfce64b4e424f1e9119aa787b25b005?sid=85e54d2a-ea46-4eb7-85f6-9b5837998f61" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></center>
 
 To minimize the regularized average Ulta loss, we solve for $h$ by setting  
 $$ \frac{\partial R_\lambda(h)}{\partial h} = 0. $$  
