--- a/problems/fa24-final/q08.md
+++ b/problems/fa24-final/q08.md
@@ -1,5 +1,7 @@
 # BEGIN PROB
 
+[🎥 Walkthrough Available](https://www.loom.com/share/ec9d2a7bdab746f0b62afdb1c3f0a7fc?sid=80c42e9a-a724-44a2-b50e-7f97173f6ed3)
+
 Suppose we want to fit a simple linear regression model (using squared
 loss) that predicts the number of ingredients in a product given its
 price. We're given that:
@@ -33,6 +35,8 @@ $$ L = (y - H(x_i))^2 $$
 
 Substituting $y = 11$ (actual) and $H(x_i) = 15$ (predicted):  
 $$ L = (11 - 15)^2 = (-4)^2 = 16 $$  
+
+<center><iframe width="800" height="450" src="https://www.loom.com/embed/ec9d2a7bdab746f0b62afdb1c3f0a7fc?sid=bcddb394-2798-4bdb-b2a0-858f9de631b5" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></center>
 
 
 <average>86</average>
