--- a/problems/fa24-midterm/q04.md
+++ b/problems/fa24-midterm/q04.md
@@ -1,5 +1,7 @@
 # BEGIN PROB
 
+[🎥 Walkthrough Available](https://youtu.be/mdJXZsS6-AA?si=wokLX_oqJHz1m8N6)
+
 The bar chart below shows the distribution of the number of reviews per
 `"author"` in `reviews`. For instance, it's telling us that
 approximately 120 `"author"`s wrote 2 reviews. **Assume that the height
@@ -29,6 +31,10 @@ W = reviews["author"].value_counts().__(i)__
 - `iloc[2]`.
 - `value_counts().index[-2]`.
 - `value_counts().index[6]`.
+
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mdJXZsS6-AA?si=wokLX_oqJHz1m8N6" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
 
 `reviews["author"].value_counts()` is a **Series** where:
 - The index contains all of the unique values in `reviews["author"]`.
@@ -86,6 +92,10 @@ Which value is equal to **8**?
 # BEGIN SOLUTION
 
 **Answer**: `Z = reviews["author"].value_counts().value_counts().index[-1]`.
+
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mdJXZsS6-AA?si=wokLX_oqJHz1m8N6" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
 
 In the solution to the previous part, we understood that `reviews["author"].value_counts()` would look something like:
 
