--- a/problems/fa24-midterm/q08.md
+++ b/problems/fa24-midterm/q08.md
@@ -1,3 +1,5 @@
+[🎥 Walkthrough Available](https://www.loom.com/share/6e2d55c629b6476888280720c651dc5b?sid=541630ea-1fb1-42d4-979c-c715e64fafc5)
+
 # BEGIN PROB
 
 Consider the DataFrame `framer`, defined below.
@@ -22,6 +24,8 @@ framer.loc["emirates", "Economy"]
 
 **Answer**: The last name, alphabetically, among all authors who submitted an
 Economy Class Emirates review.
+
+<center><iframe width="800" height="450" src="https://www.loom.com/embed/6e2d55c629b6476888280720c651dc5b?sid=9216403b-2144-496f-a85c-5a9087abaeed" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></center>
 
 `framer` might look something like this:
 
