--- a/problems/fa24-midterm/q09.md
+++ b/problems/fa24-midterm/q09.md
@@ -1,5 +1,7 @@
 # BEGIN PROB
 
+<a href="https://youtu.be/49GwpDaaC0c?si=lrHgGh4AxZ4n42Ev">🎥 Walkthrough Available</a>
+
 Consider the DataFrame `lines`, created by keeping the rows in `reviews`
 corresponding to reviews written between 2015-11-24 and 2015-11-28.
 Remember, each row in `lines` corresponds to a review of an **airline**.
@@ -37,6 +39,8 @@ How many values in `ports["date"]` are equal to `"2015-11-24"`?
 **Answer**: 0.
 
 Since `ports["date"].unique()` evaluates to `array(["2015-11-26", "2015-11-27", "2015-11-28"])`, we know that none of the values in `ports["date"]` are `"2015-11-24"`.
+
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/49GwpDaaC0c?si=lrHgGh4AxZ4n42Ev" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
 
 <average>83</average>
 
