--- a/problems/fa24-final/q07.md
+++ b/problems/fa24-final/q07.md
@@ -31,6 +31,11 @@ $h_0^*$
 
 $R_0(h)$ counts the number of incorrect predictions for each prediction, so choosing the most frequent value (mode) minimizes this count.
 
+**Note**: This was our intended answer, as the idea here was to mirror 0-1 loss from discussion (and briefly mentioned in lecture). 0-1 loss is defined as:
+
+$$L_{0-1}(y_i, h) = \begin{cases} 0 & \text{if } y_i = h \\ 1 & \text{if } y_i \neq h \end{cases}$$
+
+But, we posed the question in a way that's a little too vague, as $$0^0$$ is undefined, and we need it to be $$0$$ for this interpretation to hold. So, we gave everyone credit for this part.
 
 <average>100</average>
 
