wn25-midterm solutions all updated

--- a/problems/wn25-midterm/q06.md
+++ b/problems/wn25-midterm/q06.md
@@ -2,10 +2,10 @@
 
 Consider the DataFrames `A` and `B`, shown below in their entirety.
 
-::: center
-![image](midterm-images/A.png){width="40%"}
-![image](midterm-images/B.png){width="40%"}
-:::
+<center>
+<img src="../assets/images/wn25-midterm/A.png" width=40%>
+<img src="../assets/images/wn25-midterm/B.png" width=40%>
+</center>
 
 Note that the `"type"` value in row **3** of DataFrame `B` is unknown.
 Remember from the Data Overview page that the only possible values in
@@ -15,10 +15,25 @@ the `"type"` column are `"Buffet"`, `"Drinks"`, `"Meal"`, and `"Snack"`.
 
 Suppose the DataFrame `A.merge(B, on="type")` has `7` rows.
 
-What must the unknown value, $\boxed{\text{???}}$, be? ( ) Drinks ( )
-Buffet ( ) Meal ( ) Snack
+What must the unknown value, $\boxed{\text{???}}$, be?
+
+( ) `"Drinks"`   
+( ) `"Buffet"`   
+( ) `"Meal"`    
+( ) `"Snack"`   
 
 # BEGIN SOLUTION
+**Answer** `Drinks`
+
+When performing a merge operation on DataFrames A and B using the `"type"` column as the key, the number of rows in the result depends on the number of matching entries between A and B for each value in the `"type"` column. The possible values for `"type"` are `"Buffet"`, `"Drinks"`, `"Meal"`, and `"Snack"`. Also, when the type of merge is not specified, the default merge type to consider is an **inner merge**.
+
+Given that the resulting DataFrame after the merge has 7 rows, this means that there are 7 matches between the rows in A and B based on the `"type"` column. The value in the third row of DataFrame B is unknown. We need to figure out which value for `"type"` will give exactly 7 matches when merged with A.
+
+Since merging on `"type"` generates rows where both DataFrames have the same `"type"`, we need to look at the counts of each type in A and B to deduce which value the unknown `"type"` should be. We can see that there are 5 rows with type `"Buffet"` in DataFrame A and 1 row with type `"Buffet"` in DataFrame B. This means in our merged dataset we will have at least 5 rows of `"Buffet"`.
+
+We can then go through each of the different options to see which option will give us exactly 7 rows in our merged dataset. If the unknown value is:
+
+- **Drinks**: We have 2 rows with type `"Drinks"` in DataFrame A and 1 row with type `"Drinks"` (unknown value replaced) in DataFrame B, which gives us $2 \times 1 = 2$ rows in our merged dataset. This is the correct answer because now we will have 5 (Buffet rows) + 2 (Drinks rows) = 7 rows in the merged dataset.
 
 # END SOLUTION
 
@@ -28,11 +43,21 @@ Buffet ( ) Meal ( ) Snack
 
 Suppose the DataFrame `A.merge(B, on="type")` has `10` rows.
 
-What must the unknown value, $\boxed{\text{???}}$, be?
+What must the unknown value, $\boxed{\text{???}}$ be?
 
-( ) `"Drinks"` ( ) `"Buffet"` ( ) `"Meal"` ( ) `"Snack"`
+( ) `"Drinks"`   
+( ) `"Buffet"`   
+( ) `"Meal"`    
+( ) `"Snack"`        
 
 # BEGIN SOLUTION
+**Answer** `Buffet`
+
+Using similar logic to part a, we can then go through each of the different options to see which option will give us exactly 10 rows in our merged dataset. If the unknown value is:
+
+- **Drinks**: We have 2 rows with type `"Drinks"` in DataFrame A and 1 row with type `"Drinks"` (unknown value replaced) in DataFrame B, which gives us $2 \times 1 = 2$ rows in our merged dataset. This gives us 5 (Buffet rows) + 2 (Drinks rows) = 7 rows in the merged dataset, not 10.
+
+- **Buffet**: We have 5 rows of `"Buffet"` in DataFrame A and 2 rows in DataFrame B, which gives us $2 \times 5 = 10$ rows in our merged dataset. This is the correct answer because now we will have exactly 10 rows (all Buffet rows) in total.
 
 # END SOLUTION
 
@@ -40,14 +65,29 @@ What must the unknown value, $\boxed{\text{???}}$, be?
 
 # BEGIN SUBPROB
 
-Suppose the DataFrame `A.merge(B, on="type", how="outer")` has $k$ rows.
+Suppose the DataFrame `A.merge(B, on="type", how="outer")` has $k$ rows.  
 The value of $k$ depends on the unknown value, $\boxed{\text{???}}$.
 
 Which integer below **cannot** be $k$?
 
-( ) 11 ( ) 12 ( ) 14 ( ) 16
+( ) 11   
+( ) 12  
+( ) 14 
+( ) 16
 
 # BEGIN SOLUTION
+**Answer** 14
+
+An outer merge combines all rows from both A and B. If a row in A does not have a corresponding match in B (or vice versa), the resulting merged DataFrame will contain that row, with missing values filled as NaN.
+
+We can replace the unknown value with each type and compute how many rows we expect to see in the final dataset after an outer merge:
+
+- If the unknown value is **Drinks**: We will have 2 (Drinks rows) + 5 (Buffet rows) + 2 (Meal rows) + 2 (Snack rows) = 11 rows.
+- If the unknown value is **Buffet**: We will have 10 (Buffet rows) + 2 (Drink rows from DataFrame A) + 2 (Meal rows) + 2 (Snack rows) = 16 rows.
+- If the unknown value is **Meal**: We will have 3 (Meal rows) + 5 (Buffet rows) + 2 (Drink rows) + 2 (Snack rows) = 12 rows.
+- If the unknown value is **Snack**: We will have 3 (Snack rows) + 5 (Buffet rows) + 2 (Meal rows) + 2 (Meal rows) = 12 rows.
+
+Thus, the only possible number of rows that **cannot** occur is **14**.
 
 # END SOLUTION
 
@@ -59,9 +99,25 @@ Suppose the unknown value, $\boxed{\text{???}}$, is `"Buffet"`.
 
 How many rows are in the DataFrame `A.merge(B, on=["type", "rating"])`?
 
-( ) 0 ( ) 1 ( ) 2 ( ) 3 ( ) 4 ( ) 5 ( ) 6 ( ) 7
+( ) 0  
+( ) 1  
+( ) 2  
+( ) 3  
+( ) 4  
+( ) 5  
+( ) 6  
+( ) 7  
 
 # BEGIN SOLUTION
+**Answer** 2
+
+We are asked to perform a merge on two columns: `"type"` and `"rating"`. This means that for each row in the merged DataFrame, the `"type"` and `"rating"` must match between A and B for the row to appear in the result. Also, the type of merge is **inner** since the type of merge is not specified.
+
+Given that the unknown value is `"Buffet"`, let's analyze the possible matches:
+
+- We can see that only **type `"Buffet"` with rating 4.6** has a match in both DataFrames. The total number of rows with `"Buffet"` and rating 4.6 is **2** (1 from A and 1 from B).
+
+Thus, the total number of rows in the merged DataFrame is **2**.
 
 # END SOLUTION
 
