--- a/problems/wn25-midterm/q15.md
+++ b/problems/wn25-midterm/q15.md
@@ -1,7 +1,5 @@
 # BEGIN PROB
 
-\[(0.5 pts; extra credit)\]
-
 In Question 7, assuming that there are 100 unique drivers, what is the
 true, theoretical probability that `"WOLVAA01"` wins a free gift card?
 Show your work, and your final answer, which should be a **fraction**.
@@ -9,11 +7,25 @@ Show your work, and your final answer, which should be a **fraction**.
 Don't spend time on this question if you haven't attempted all other
 questions, as it is purely for (very little) extra credit.
 
-::: responsebox
-3in
-:::
-
 # BEGIN SOLUTION
+**Answer** $\frac{55}{100}$
+
+We have 100 unique drivers and 10 different groups. The probability that `"WOLVAA01"` wins is calculated by adding up the chances that it is chosen in each group.
+
+For each group, the probability of winning depends on how many drivers are in that group. For example:
+
+- In the first group, the probability that `"WOLVAA01"` wins is $\frac{1}{10} \times \frac{1}{100}$.
+- In the second group, the probability is $\frac{1}{10} \times \frac{2}{100}$.
+- This continues until the tenth group, where the probability is $\frac{1}{10} \times \frac{10}{100}$.
+
+The total probability is the sum of these individual probabilities:
+$$
+\text{Total Probability} = \frac{1}{10} \times \frac{1}{100} + \frac{1}{10} \times \frac{2}{100} + \cdots + \frac{1}{10} \times \frac{10}{100}
+$$
+which simplifies to:
+$$
+\text{Total Probability} = \frac{1}{1000} (1 + 2 + \cdots + 10) = \frac{1}{1000} \times 55 = \frac{55}{1000} = \frac{55}{100}.
+$$
 
 # END SOLUTION
 
