--- a/problems/wn25-midterm/q05.md
+++ b/problems/wn25-midterm/q05.md
@@ -1,13 +1,14 @@
 # BEGIN PROB
 
 Consider the DataFrame `C`, defined below.
-
+```python
     C = orders.pivot_table(
       index="type", # Possible values: "Buffet", "Drinks", "Meal", "Snacks"
       columns="traffic", # Possible values: "High", "Low", "Moderate", "Very Low"
       values="minutes",
       aggfunc="count"
     )
+```
 
 Throughout this question, assume that after defining `C` above, **we
 sort `C` such that both its index and columns are in ascending
@@ -20,17 +21,19 @@ Fill in the blanks so that the expression below evaluates to the
 traffic**. Each blank should be filled with a single integer, float,
 string, or Boolean value.
 
+```python
     C.iloc[__(i)__, __(ii)__] / C.loc[__(iii)__].sum()
-
+```
 
 
 # BEGIN SOLUTION
-**Answer**: There are multiple possible answers - 
-- `(i)` 3 or -1 - 
+**Answer**: There are multiple possible answers  
 
-- `(ii) 2 or -2  - we want to check whether all ratings for a given driver are the same. 
+- `(i)` `3 or -1` -  The index of C is sorted alphabetically, meaning the row order follows "Buffet", "Drinks", "Meal", "Snacks". Since "Snacks" is the last item in this order, its index is 3 (0-based) or -1 (negative indexing).
 
-- `(iii) agg` -  The `.agg()` function allows us to apply an aggregation function to each group (driver in this case). This is necessary because we are checking a condition (whether the ratings are the same) for each driver, and `agg` allows us to apply a function that evaluates this condition across all the ratings of a driver.
+- `(ii)` `2 or -2` -  Similarly, the columns are sorted alphabetically: "High", "Low", "Moderate", "Very Low". "Moderate" appears third in this order, making its index 2 (0-based) or -2 (negative indexing).
+ 
+- `(iii)` `Snacks` - To get the total number of "Snacks" deliveries across all traffic levels, we use .loc["Snacks"]. The .sum() function then adds up all values in that row.
 
 # END SOLUTION
 
@@ -43,30 +46,26 @@ Fill in the blanks so that the expression below evaluates to the
 `"Buffet"`s**. Blanks (i) and (ii) should each be filled with a single
 integer, float, string, or Boolean value.
 
+```python
     C.loc[__(i)__, __(ii)__] / __(iii)__.sum()
+```
 
-`(i)`: `(ii)`:
 
-`(iii)`:
+(iii): 
 
-  --------------------- -- --
-  ( ) `C.iloc[:, -1]`      
-  ( ) `C.iloc[-1, :]`      
-  --------------------- -- --
-
-# BEGIN SOLUTION
-
-# END SOLUTION
-
-# END SUBPROB
-
-# BEGIN SUBPROB
-
-In one English sentence, describe what the following expression
-computes. Your sentence should be understandable by someone who has
-never written code before, i.e. it should not use any technical terms.
+( ) `C.iloc[:, -1]`   
+( ) `C.iloc[:, 0]`   
+( ) `C.iloc[:, 1]`    
+( ) `C.iloc[-1, :]`        
+( ) `C.iloc[0, :]`      
+( ) `C.iloc[1, :]`
 
 # BEGIN SOLUTION
+- `(i)``Buffet` - when using  `.loc[]`, we reference labels instead of numerical indices. Since the index represents order `"type"` and is sorted alphabetically ("Buffet", "Drinks", "Meal", "Snacks"), "Buffet" is the correct label for selecting the row corresponding to buffet orders.
+
+- `(ii)` `Low` - similarly, the column order is sorted alphabetically as "High", "Low", "Moderate", "Very Low", making "Low" the correct column label to select deliveries in "Low" traffic.
+
+- `(iii)` `C.iloc[:, 1]` - Here, we are using `.iloc[]`, which is integer-location based indexing. The `[:, 1]` part means we are selecting all rows (:) in the second column (index 1), which corresponds to "Low" traffic, since the columns are sorted alphabetically as "High", "Low", "Moderate", "Very Low". By selecting `C.iloc[:, 1]`, we are referencing all the values in the "Low" column, and .sum() will give the total number of deliveries made in "Low" traffic, across all order types.
 
 # END SOLUTION
 
