--- a/problems/wn25-midterm/q07.md
+++ b/problems/wn25-midterm/q07.md
@@ -14,7 +14,7 @@ card for their service. To do so, they:
 Driver `"WOLVAA01"` asks ChatGPT to write code that simulates the
 probability that he wins a gift card, and it gives him back the
 following:
-
+```python
     drivers = orders["driver"].unique()
 
     def choose_k():
@@ -34,7 +34,7 @@ following:
         for i in range(N):
             total = total + one_sim(k)
         return total / N
-
+```
 `simulation()` *should* return an estimate of the probability that
 `"WOLVAA01"` wins a gift card, but some of the code is potentially
 buggy. **Select all issues** with the code above.
@@ -46,10 +46,18 @@ buggy. **Select all issues** with the code above.
 [ ] `one_sim` draws `k` drivers without replacement, instead of with replacement.
 [ ] `one_sim` always returns `False`, because `selected` is always an empty array.
 [ ] `simulation` only picks one value of `k`, when it should select a new `k` on each iteration.
-
 [ ] None of the above.
 
 # BEGIN SOLUTION
+**Answer** 
+
+**`one_sim` draws `k` drivers with replacement, instead of without replacement** - Because `np.random.choice()` is called separately each time within the for loop, there is no guarantee that all k chosen drivers will be distinct across iterations. Which means that some drivers might be picked more than once, violating the "unique drivers" requirement.The correct way to choose the k drivers would be - 
+```python
+np.random.choice(drivers, k, replace=False)
+```
+
+
+**`simulation` only picks one value of `k`, when it should select a new `k` on each iteration** - The code defines k once at the beginning of simulation() using `choose_k()`. This means that the same value of k is used for all iterations of the simulation. However, as per the problem statement, k should be chosen anew on each iteration of the simulation. Therefore, the function `choose_k()` should be called within the loop to select a random k for each iteration.
 
 # END SOLUTION
 
