--- a/problems/wn25-midterm/q08.md
+++ b/problems/wn25-midterm/q08.md
@@ -14,22 +14,23 @@ the **same** value, **before and after** the imputation code is run. The
 first part is done for you.
 
 # BEGIN SUBPROB
-
+```python
     t = lambda x: x.fillna(x.mean())
     D["minutes"] = t(D["minutes"])
-
-- `D["minutes"].isna().sum()`
+```
+- `D.shape[0]`
 
 # BEGIN SOLUTION
-
+`D.shape[0]` is guaranteed to evaluate to the same value before and after the imputation code is run because it represents the total number of rows in the DataFrame, which is unaffected by filling in missing values. The imputation modifies the "minutes" column but does not alter the number of rows.
 # END SOLUTION
 
 # END SUBPROB
 
 # BEGIN SUBPROB
-
+```python
     t = lambda x: x.fillna(x.mean())
     D["minutes"] = t(D["minutes"])
+```
 
 [ ] `D["minutes"].mean()`
 [ ] `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
@@ -37,6 +38,12 @@ first part is done for you.
 [ ] None of the above.
 
 # BEGIN SOLUTION
+**Answer** 
+In this imputation code we are performing mean imputation by filling the missing values with the mean of the whole dataset
+
+`D["minutes"].mean()` - This expression will remain the same before and after the imputation because we are filling the missing values in "minutes" with the mean of the column. Thus, the overall mean of the column will remain unchanged.
+
+`D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since the imputation does not affect the rows where "traffic" is "Moderate" (i.e., these rows already have no missing values), the mean for this subset of the data will remain unchanged as well.
 
 # END SOLUTION
 
@@ -53,6 +60,12 @@ first part is done for you.
 [ ] None of the above.
 
 # BEGIN SOLUTION
+**Answer** 
+In this imputation code we are performing conditional mean imputation by filling the missing values with the minutes of each group of traffic.
+
+`D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since the imputation only fills in missing values for the "minutes" column based on the mean of the "minutes" values within each traffic group, the mean for "Moderate" traffic will remain unchanged.
+
+`D.groupby("traffic")["minutes"].mean()` - The imputation groups by the "traffic" column and fills missing values using the mean of "minutes" within each group. Since "Moderate" traffic already had no missing values, the mean for this group will not be affected, and neither will the means for other groups, assuming the missing values are only filled within their respective groups.
 
 # END SOLUTION
 
@@ -70,6 +83,10 @@ first part is done for you.
 [ ] None of the above.
 
 # BEGIN SOLUTION
+**Answer**
+In this imputation code we are performing unconditional probabalistic imputation by filling the missing values by randomly sampling from the present values in the "minutes" column
+
+ `D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since "Moderate" traffic rows have no missing values, the imputation does not affect them. Therefore, the mean for this subset of data will remain unchanged.
 
 # END SOLUTION
 
