--- a/problems/wn25-midterm/q10.md
+++ b/problems/wn25-midterm/q10.md
@@ -1,7 +1,5 @@
 # BEGIN PROB
 
-\[(10 pts)\]
-
 Consider the following corpus of two documents:
 
 1.  butter chicken
@@ -21,9 +19,55 @@ Given that the cosine similarity between the bag-of-words vector
 representations of the two documents is $\displaystyle \frac{5}{9}$,
 what is the value of $k$?
 
-( ) 3 ( ) 4 ( ) 5 ( ) 6 ( ) 7 ( ) 8 ( ) 9 ( ) 10
+( ) 3 
+( ) 4 
+( ) 5
+( ) 6 
+( ) 7 
+( ) 8 
+( ) 9 
+( ) 10
 
 # BEGIN SOLUTION
+**Answer** 5
+
+The vector for Document 1 is:  $\vec{d_1} = (1, 1, k, 0, 0)$ 
+
+The vector for Document 2 is: $\vec{d_2} = (0, 0, 1, 1, 1)$
+
+For the two vectors $\vec{d_1} = (1, 1, k, 0, 0)$ and  $\vec{d_2} = (0, 0, 1, 1, 1)$, the dot product is:
+$$
+\text{Dot product} = (1)(0) + (1)(0) + (k)(1) + (0)(1) + (0)(1) = k
+$$
+
+Next, we need to calculate the magnitudes (or norms) of the two vectors. 
+$$
+\|\vec{d_1}\| = \sqrt{1^2 + 1^2 + k^2 + 0^2 + 0^2} = \sqrt{2 + k^2}
+$$
+
+$$
+\|\vec{d_2}\| = \sqrt{0^2 + 0^2 + 1^2 + 1^2 + 1^2} = \sqrt{3}
+$$
+
+
+Now we can calculate the cosine similarity using the formula:
+$$
+\text{Cosine similarity} = \frac{\text{Dot product}}{\|\vec{d_1}\| \cdot \|\vec{d_2}\|}
+$$
+
+Substitute the values we calculated:
+$$
+\text{Cosine similarity} = \frac{k}{\sqrt{2 + k^2} \cdot \sqrt{3}}
+$$
+
+We are given that the cosine similarity is $\frac{5}{9}$. So, we set up the equation:
+$$
+\frac{k}{\sqrt{2 + k^2} \cdot \sqrt{3}} = \frac{5}{9}
+$$
+
+Solving for k gives us 5.
+
+
 
 # END SOLUTION
 
@@ -33,7 +77,56 @@ what is the value of $k$?
 
 In this part, assume we are using a base-2 logarithm.
 
+(i) Which term in **document 1** has the largest TF-IDF? If there are ties select them all
+
+( ) `butter` 
+( ) `chicken`
+( ) `naan`
+( ) `curry`
+( ) `with`
+
+
+(i) Which term in **document 2** has the largest TF-IDF? If there are ties select them all
+
+( ) `butter` 
+( ) `chicken`
+( ) `naan`
+( ) `curry`
+( ) `with`
+
 # BEGIN SOLUTION
+**Answer**
+- `(i)` `butter` and `chicken`
+- `(i)` `curry` and `with`
+
+
+The TF-IDF score of a term in a document is given by:
+$$
+\text{tf-idf}(t,d) = \text{tf}(t,d) \cdot \text{idf}(t)
+                    = \frac{\# \text{ of occurrences of } t \text{ in } d }{\text{total } \# \text{ of terms in } d} \cdot \log_2\left(\frac{\text{total } \# \text{ of documents}}{\# \text{ of documents in which } t \text{ appears}}\right)
+$$
+
+**Document 1**:
+
+- `butter`: Appears 1 time in the document, so the TF is $\frac{1}{k+2}$.
+- `chicken`: Appears 1 time in the document, so the TF is $\frac{1}{k+2}$.
+- `naan`: Appears $k$ times, so the TF is $\frac{k}{k+2}$.
+- `curry`: Appears 1 time, so the TF is $\frac{1}{k+2}$.
+- `with`: Appears 1 time, so the TF is $\frac{1}{k+2}$.
+
+**Document 2**:
+
+- `curry`: Appears 1 time in the document, so the TF is $\frac{1}{3}$.
+- `with`: Appears 1 time, so the TF is $\frac{1}{3}$.
+- `naan`: Appears 1 time, so the TF is $\frac{1}{3}$.
+
+The IDF for terms is computed based on their presence across both documents:
+
+- For terms like `butter`, `chicken`, and `naan` in document 1, the IDF will be based on their presence across both documents.
+- For terms like `curry` and `with` in document 2, they will have a higher IDF.
+
+The terms `butter`, `chicken` in document 1 and `curry`, `with` in document 2 have the largest TF-IDF scores, respectively, due to their unique occurrences in each document.
+
 
 # END SOLUTION
 
@@ -49,11 +142,13 @@ need to make sense of on the job. For instance, the **Wolverine Score
 to quantify the importance of a term $t$ to a document $d$, given a
 corpus of documents $d_1, d_2, ..., d_n$.
 
-$$\text{WS}(t, d) = \left( \frac{\text{total # of terms in $d$}}{\text{# of occurrences of $t$ in $d$}} \right) \cdot   \left( \frac{\sum_{i=1}^n \text{# of occurrences of $t$ in $d_i$}}{\sum_{i=1}^n \text{total # of terms in $d_i$}}\right)$$
+$$
+\text{WS}(t, d) = \left( \frac{\text{total \# of terms in } d}{\text{\# of occurrences of } t \text{ in } d} \right) \cdot \left( \frac{\sum_{i=1}^n \text{\# of occurrences of } t \text{ in } d_i}{\sum_{i=1}^n \text{total \# of terms in } d_i} \right)
+$$
 
 Fill in the blank to complete the statement below.
 
-"If `____`, then term $t$ is more common in document $d$ than it is
+"If `___`, then term $t$ is more common in document $d$ than it is
 across the entire corpus, and so $t$ is likely an important term in
 $d$.\"
 
@@ -67,6 +162,11 @@ What goes in the blank?
 ( ) $\text{WS}(t, d) > \frac{1}{n}$, where $n$ is the number of documents in the corpus
 
 # BEGIN SOLUTION
+**Answer** $\text{WS}(t, d) < 1$
+
+The **Wolverine Score (WS)** compares the occurrence of a term $t$ within a document $d$ relative to its occurrence across the entire corpus. If the value of WS for a term is less than 1, it indicates that the term $t$ is more common in document $d$ than it is in the overall corpus. This implies that the term is likely an important term for document $d$.
+
+The WS formula suggests that if the term $t$ occurs more frequently in document $d$ relative to its occurrence in the entire corpus, the WS score will be less than 1, making $t$ a significant term for document $d$.
 
 # END SOLUTION
 
