--- a/problems/disc12/q13.md
+++ b/problems/disc12/q13.md
@@ -27,25 +27,25 @@ select Yes or No.
 
 
 
-**Wolfcare:** 
+**Wolfcare** 
 
 ( ) Yes 
 ( ) No
 
 
-**Go Blue Glow:** 
+**Go Blue Glow** 
 
 ( ) Yes 
 ( ) No
 
 
-**DataSPF:**
+**DataSPF**
 
 ( ) Yes 
 ( ) No
 
 
-**Maize Mist:** 
+**Maize Mist** 
 
 ( ) Yes 
 ( ) No
@@ -53,69 +53,53 @@ select Yes or No.
 
 # BEGIN SOLUTION
 
-Using the sigmoid function, we can predict the probabliity using this general formula - 
+Using the logistic function, we can predict the probability that a product is designed for sensitive skin using:
 
-$$ P(y = 1 | \vec{x}) = \sigma(\vec{w}^T \vec{x}) $$
+$$ P(y_i = 1 | \vec{x}_i) = \sigma(\vec w^* \cdot \text{Aug} (\vec x_i) ) $$
 
-where $\sigma(x) = \frac{1}{1 + e^{-x}}$ is the sigmoid function.
+where $\sigma(t) = \frac{1}{1 + e^{-t}}$ is the sigmoid function.
 
-We calculate $z = \vec{w}^T \vec{x}$ for each product and then apply the sigmoid function to find the probability $P(y = 1 | \vec{x})$. If the probability is greater than or equal to 0.5, the product is predicted to be designed for sensitive skin.
-
+One of the properties we discussed in Lecture 22 was that $\sigma(0) = \frac{1}{2}$, meaning that if the input to $\sigma(\cdot)$ is greater than or equal to 0, the predicted probability is greater than or equal to $\frac{1}{2}$. So, the problem here reduces to computing $\vec w^* \cdot \text{Aug} (\vec x_i)$ for all four products, and checking whether this dot product is $\geq 0$.
 
 **Wolfcare**:
 
 $$
-z = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix}^T \cdot \begin{bmatrix} 1 \\ 15 \\ 20 \\ 4.5 \end{bmatrix}
+\vec w^* \cdot \text{Aug} (\vec x_\text{Wolfcare}) = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix} \cdot \begin{bmatrix} 1 \\ 15 \\ 20 \\ 4.5 \end{bmatrix}
 $$
 $$
-z = -1 + \frac{1}{5}(15) - \frac{3}{5}(20) + 0 = -1 + 3 - 12 = -10
-$$
-$$
-P = \frac{1}{1 + e^{-(-10)}} = \frac{1}{1 + e^{10}} \approx 0
+ = -1 + \frac{1}{5}(15) - \frac{3}{5}(20) + 0 = -1 + 3 - 12 = -10
 $$
 
-
-**Decision: No**, as $P < 0.5$
+Since $-10 < 0$, $P(y_\text{Wolfcare} = 1 | \vec{x}_\text{Wolfcare}) < \frac{1}{2}$, so the answer is $\boxed{\text{No}}$.
 
 **Go Blue Glow**:
 
 $$
-z = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix}^T \cdot \begin{bmatrix} 1 \\ 25 \\ 5 \\ 4.9 \end{bmatrix}
-$$
-$$
-z = -1 + \frac{1}{5}(25) - \frac{3}{5}(5) + 0 = -1 + 5 - 3 = 1
-$$
-$$
-P = \frac{1}{1 + e^{-1}} \approx \frac{1}{1 + 0.3679} \approx 0.73
+\begin{align*} \vec w^* \cdot \text{Aug} (\vec x_\text{Go Blue Glow}) &= \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix} \cdot \begin{bmatrix} 1 \\ 25 \\ 5 \\ 4.9 \end{bmatrix}
+\\ &= -1 + \frac{1}{5}(25) - \frac{3}{5}(5) + 0 = -1 + 5 - 3 = 1
+\end{align*}
 $$
 
-**Decision: Yes**, as $P \geq 0.5$.
+Since $1 > 0$, $P(y_\text{Go Blue Glow} = 1 | \vec{x}_\text{Go Blue Glow}) > \frac{1}{2}$, so the answer is $\boxed{\text{Yes}}$.
 
 **DataSPF**:
 
 $$
-z = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix}^T \cdot \begin{bmatrix} 1 \\ 50 \\ 15 \\ 3.6 \end{bmatrix}
-$$
-$$
-z = -1 + \frac{1}{5}(50) - \frac{3}{5}(15) + 0 = -1 + 10 - 9 = 0
-$$
-$$
-P = \frac{1}{1 + e^{-0}} = \frac{1}{2} = 0.5
+\begin{align*} \vec w^* \cdot \text{Aug} (\vec x_\text{DataSPF}) &= \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix} \cdot \begin{bmatrix} 1 \\ 50 \\ 15 \\ 3.6 \end{bmatrix}
+\\ &= -1 + \frac{1}{5}(50) - \frac{3}{5}(15) + 0 = -1 + 10 - 9 = 0
+\end{align*}
 $$
 
-**Decision: Yes**, as $P \geq 0.5$.
+Since $\vec w^* \cdot \text{Aug} (\vec x_\text{DataSPF})= 0$, $P(y_\text{DataSPF} = 1 | \vec{x}_\text{DataSPF}) = \frac{1}{2}$, so the answer is $\boxed{\text{Yes}}$.
 
 **Maize Mist**:
 $$
-z = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix}^T \cdot \begin{bmatrix} 1 \\ 0 \\ 1 \\ 5.0 \end{bmatrix}
+\begin{align*} \vec w^* \cdot \text{Aug} (\vec x_\text{Maize Mist}) &= \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix} \cdot \begin{bmatrix} 1 \\ 0 \\ 1 \\ 5.0 \end{bmatrix}
+\\ &= -1 + \frac{1}{5}(0) - \frac{3}{5}(1) + 0 = -1 - 0.6 = -1.6
+\end{align*}
 $$
-$$
-z = -1 + \frac{1}{5}(0) - \frac{3}{5}(1) + 0 = -1 - 0.6 = -1.6
-$$
-$$
-P = \frac{1}{1 + e^{-(-1.6)}} = \frac{1}{1 + e^{1.6}} \approx \frac{1}{1 + 4.953} \approx 0.17
-$$
-**Decision: No**, as $P < 0.5$
+
+Since $-1.6 < 0$, $P(y_\text{Maize Mist} = 1 | \vec{x}_\text{Maize Mist}) < \frac{1}{2}$, so the answer is $\boxed{\text{No}}$.
 
 
 # END SOLUTION
