--- a/problems/old-from-40a/fa21-final/q07.md
+++ b/problems/old-from-40a/fa21-final/q07.md
@@ -1,22 +1,37 @@
 # BEGIN PROB
 
 
-Consider the following dataset of 7 points.
+Consider the following dataset of $n=7$ points in $d=2$ dimensions.
 
 <center><img src="../assets/images/disc13/graph.png" width="500"></center>
 
-Suppose we want to identify $k=2$ clusters in this dataset using $k$-Means Clustering.
+# BEGIN SUBPROB
 
+Suppose we decide to use agglomerative clustering to cluster the data. How many possible pairs of clusters could we combine in the first iteration?
 
+# BEGIN SOLUTION
+
+**Answer**: 5
+
+Recall, in agglomerative clustering, we combine the two closest clusters at each iteration. In the first iteration, each point is in its own cluster. There are 5 pairs of points that are all at a distance of 2 units from each other, and no pair of points is closer than 2 units.
+
+Specifically, any two adjacent vertices in the "square" in the top left are 2 units apart (top left and top right, top right and bottom right, bottom left and bottom right, bottom left and top left), which adds to 4 pairs. Then, the bottom two vertices in the triangle in the bottom left are also 2 units apart. This totals $4 + 1 = 5$ pairs of points that are all at a distance of 2 units from each other, so there are 5 possible clusters we could combine in the first iteration.
+
+# END SOLUTION
+
+# END SUBPROB
 
 # BEGIN SUBPROB
+
+Suppose we want to identify $k=2$ clusters in this dataset using $k$-means clustering.
+
 Determine the centroids $\vec{\mu}_1$ and $\vec{\mu}_2$ that minimize inertia. (Let $\vec{\mu}_1$ be the centroid with a smaller $x_1$ coordinate.) Justify your answers.
 
 _Note: You don't have to run the k-Means Clustering algorithm to answer this question._
 
 # BEGIN SOLUTION
 
-$$\vec{\mu}_1 = \begin{bmatrix} 3 \\ 9 \end{bmatrix}, \vec{\mu}_2 = \begin{bmatrix} 8 \\ 2 \end{bmatrix}$$
+**Answer**: $\vec{\mu}_1 = \begin{bmatrix} 3 \\ 9 \end{bmatrix}, \vec{\mu}_2 = \begin{bmatrix} 8 \\ 2 \end{bmatrix}$
 
 It's clear that there are two clusters --- one in the top left, and one in the bottom right.
 
@@ -39,11 +54,11 @@ $$\vec{\mu}_1 = \begin{bmatrix} 3 \\ 9 \end{bmatrix}, \vec{\mu}_2 = \begin{bmatr
 # END SUBPROB
 
 # BEGIN SUBPROB
-What is the total inertia for the centroids you chose in part (a)? Show your work.
+What is the total inertia for the centroids you chose in the previous part? Show your work.
 
 # BEGIN SOLUTION
 
-$16$. 
+**Answer**: $16$ 
 
 We'll proceed by determining the inertia of each cluster individually and adding the results together.
 
